--- a/A2/a2.css
+++ b/A2/a2.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 #aufnehmen{
 	width: 200px;
 	height: 20px;
@@ -39,6 +41,7 @@
 	position:absolute;
 	font-family:'Helvetica';
 	font-size:2em;
+	top:200px;
 }
 .red{
     color: white;
