--- a/A4/a4.css
+++ b/A4/a4.css
@@ -1,15 +1,18 @@
 @charset "UTF-8";
+body {
+	background-color: black;
+}
 img {
 	width: 50px;
 	height: 100px;
 	position: absolute;
-	left: 520px;
-	top: 20px;
+	left: 730px;
+	top: 30px;
 }
 h2 {
 	font-size:1.4em;
 	font-family: 'Quicksand', sans-serif;
-	color: #5e150e;
+	color: #094f16;
 	margin: 20px;
 }
 legend {
@@ -23,8 +26,18 @@ fieldset {
 	border: solid #adacae 5px;
 	background-color: white;
 	color:black;
+	width:65%;
 	
 	
+}
+#box {
+	position: absolute;
+	left:985px;
+	top: 10px;
+	height: 600px;
+	width:30%;
+	border: solid #094f16 10px;
+	background-color:white;
 }
 p {
 	font-size:1.0em;
@@ -40,6 +53,7 @@ select {
 h1 {
 	font-size:2.5em;
 	font-family: 'Quicksand', sans-serif;
+	text-align: center;
 }
 #firstname {
 	font-family: 'Quicksand', sans-serif;
