--- a/Abschlussarbeit/hang.css
+++ b/Abschlussarbeit/hang.css
@@ -38,6 +38,35 @@ input {
 	display: none;
 }
 
+#yourScore {
+	font-size: 3.0em;
+	font-family: 'Quicksand', sans-serif;
+	border: 5px solid black;
+	height: 40px;
+	width: 870px;
+	padding-left: 500px;
+	background-color:white;
+	margin-top:130px;
+}
+
+#reload {
+	
+	font-size: 2.0em;
+	font-family: 'Quicksand', sans-serif;
+	border: 5px solid black;
+	height: 50px;
+	width: 390px;
+	margin-left: 520px;
+}
+#scores {
+	margin-left: 550px;
+	margin-top: 5px;
+}
+#überschrift {
+	margin-left: 650px;
+	font-size: 5.0em;
+	font-family: 'Shadows Into Light', cursive;
+}
 #info {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 1.35em;
